fixes for overflow hidden and chosen pulldowns. tweaks to search in login and user pages

--- a/sites/all/themes/asb/sass/asb.scss
+++ b/sites/all/themes/asb/sass/asb.scss
@@ -67,21 +67,39 @@ body {
 // .region-search
 //
 .region-search {
-  overflow: hidden;
+  overflow: visible;
   background: $panel;
   padding: 1em 0 2em 0;
   @include transition-property(padding,height);
   @include transition-duration(.5s);
   @include transition-timing-function(ease-in-out);
   @include zigzag-border($panel, $even-backdrop);
+  .views-exposed-form {
+//    opacity: 1;
+display: block;
+// border: 1px #f00 solid;
+    @include transition-property(opacity);
+    @include transition-delay( .15s );
+    @include transition-duration( .35s );
+    @include transition-timing-function(ease-in-out);    
+  }
   height: 120px;
   &.atrest {
     @include transition-duration(0);  
   }
-  &.hidden, &.atrest { height: 0px; padding: 0 }
+  &.hidden, &.atrest {
+    height: 0px;
+    padding: 0;
+    overflow: hidden;
+    .views-exposed-form {
+      display: block;
+      opacity: 0;
+    }
+  }
   // &.active { height: auto; }
 }
 
+.page-user.logged-in,
 .not-front.page-node {
   .region-search {
     background-color: $panel;
@@ -447,3 +465,7 @@ ul.tags {
 
 }
 
+
+.no-more-results {
+  background-color: #dedede !important;
+}
